Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Runner.run(Runner.create(), engine);
    YOUTUBE CHAT INTEGRATION
 ================================ */
 const API_KEY = 'AIzaSyDHwlSUcaFUCD9A38zBwFsNc3sMsOZs-2g';
-const VIDEO_ID = 'OSg_cAc59Y4';
+const VIDEO_ID = 'ToosnvilqQ4';
 let nextPageToken = '';
 
 async function fetchChat() {
@@ -238,3 +238,4 @@ fetchChat();
 </script>
 </body>
 </html>
+
