Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Runner.run(Runner.create(), engine);
    YOUTUBE CHAT INTEGRATION
 ================================ */
 const API_KEY = 'AIzaSyDHwlSUcaFUCD9A38zBwFsNc3sMsOZs-2g';
-const VIDEO_ID = 'ToosnvilqQ4';
+const VIDEO_ID = 'Gf_zhRLD6LA';
 let nextPageToken = '';
 
 async function fetchChat() {
@@ -238,5 +238,6 @@ fetchChat();
 </script>
 </body>
 </html>
+
 
 
